- NEW: Make options work @busy - NEW: Alpha/Beta message
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3780 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: f89193eb1b924e176831f38c1a797f97a72f7e59
Former-commit-id: 9019e96c7d315fa1e40fd889411c5b63808d4cb5
Former-commit-id: 154526ac389c516f6f1b0b6ffbed8eb68b3a5422 [formerly 90fcbdde29601ee820ad4578aea27ee912fee2be]
Former-commit-id: 86a7d4fdce13c119785db634a8012302e5c04d7f

--- a/sys/__test/flexy-table/flexy-table.html
+++ b/sys/__test/flexy-table/flexy-table.html
@@ -95,8 +95,8 @@
           <!-- ROW Actions -->
           <td class="actions">
             <!-- Edit button -->
-            <a ng-show="(path==='')" ng-href="{{base_url}}#form/{{table}}/{{row.id}}" class="btn btn-xs btn-primary action-edit"><span class="glyphicon glyphicon-pencil"></span></a>
-            <a ng-show="(path!=='')" ng-href="{{base_url}}#form/{{table}}/{{path}}:{{row.id}}" class="btn btn-xs btn-primary action-edit"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a ng-show="(path===undefined)" ng-href="{{base_url}}#form/{{table}}/{{row.id}}" class="btn btn-xs btn-primary action-edit"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a ng-show="(path!==undefined)" ng-href="{{base_url}}#form/{{table}}/{{path}}:{{row.id}}" class="btn btn-xs btn-primary action-edit"><span class="glyphicon glyphicon-pencil"></span></a>
             <!-- Select button -->
             <div ng-click="select($index)" class="btn btn-xs btn-info action-select"><span class="flexy-table-unselected glyphicon glyphicon-unchecked"></span><span class="flexy-table-selected glyphicon glyphicon-check"></span></div>
             <!-- Delete button -->
